targets/url/python/urlParser.py
# Generated from url.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class urlParser ( Parser ):

    grammarFileName = "url.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'://'", "':'", "'/'", "'['", "']'", "'::'", 
                     "'@'", "'#'", "'?'", "'&'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "DIGITS", "HEX", "STRING", "WS" ]

    RULE_url_ = 0
    RULE_uri = 1
    RULE_scheme = 2
    RULE_host = 3
    RULE_hostname = 4
    RULE_v6host = 5
    RULE_port = 6
    RULE_path = 7
    RULE_user = 8
    RULE_login = 9
    RULE_password = 10
    RULE_frag = 11
    RULE_query = 12
    RULE_search = 13
    RULE_searchparameter = 14
    RULE_string = 15

    ruleNames =  [ "url_", "uri", "scheme", "host", "hostname", "v6host", 
                   "port", "path", "user", "login", "password", "frag", 
                   "query", "search", "searchparameter", "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    DIGITS=12
    HEX=13
    STRING=14
    WS=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Url_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def uri(self):
            return self.getTypedRuleContext(urlParser.UriContext,0)


        def EOF(self):
            return self.getToken(urlParser.EOF, 0)

        def getRuleIndex(self):
            return urlParser.RULE_url_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUrl_" ):
                listener.enterUrl_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUrl_" ):
                listener.exitUrl_(self)




    def url_(self):

        localctx = urlParser.Url_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_url_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.uri()
            self.state = 33
            self.match(urlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UriContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scheme(self):
            return self.getTypedRuleContext(urlParser.SchemeContext,0)


        def host(self):
            return self.getTypedRuleContext(urlParser.HostContext,0)


        def login(self):
            return self.getTypedRuleContext(urlParser.LoginContext,0)


        def port(self):
            return self.getTypedRuleContext(urlParser.PortContext,0)


        def query(self):
            return self.getTypedRuleContext(urlParser.QueryContext,0)


        def frag(self):
            return self.getTypedRuleContext(urlParser.FragContext,0)


        def WS(self):
            return self.getToken(urlParser.WS, 0)

        def path(self):
            return self.getTypedRuleContext(urlParser.PathContext,0)


        def getRuleIndex(self):
            return urlParser.RULE_uri

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUri" ):
                listener.enterUri(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUri" ):
                listener.exitUri(self)




    def uri(self):

        localctx = urlParser.UriContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_uri)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.scheme()
            self.state = 36
            self.match(urlParser.T__0)
            self.state = 38
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 37
                self.login()


            self.state = 40
            self.host()
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 41
                self.match(urlParser.T__1)
                self.state = 42
                self.port()


            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 45
                self.match(urlParser.T__2)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==12 or _la==14:
                    self.state = 46
                    self.path()




            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 51
                self.query()


            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 54
                self.frag()


            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 57
                self.match(urlParser.WS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SchemeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(urlParser.StringContext,0)


        def getRuleIndex(self):
            return urlParser.RULE_scheme

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScheme" ):
                listener.enterScheme(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScheme" ):
                listener.exitScheme(self)




    def scheme(self):

        localctx = urlParser.SchemeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_scheme)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HostContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def hostname(self):
            return self.getTypedRuleContext(urlParser.HostnameContext,0)


        def getRuleIndex(self):
            return urlParser.RULE_host

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHost" ):
                listener.enterHost(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHost" ):
                listener.exitHost(self)




    def host(self):

        localctx = urlParser.HostContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_host)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 62
                self.match(urlParser.T__2)


            self.state = 65
            self.hostname()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HostnameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return urlParser.RULE_hostname

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IPv6HostContext(HostnameContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a urlParser.HostnameContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def v6host(self):
            return self.getTypedRuleContext(urlParser.V6hostContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIPv6Host" ):
                listener.enterIPv6Host(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIPv6Host" ):
                listener.exitIPv6Host(self)


    class DomainNameOrIPv4HostContext(HostnameContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a urlParser.HostnameContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def string(self):
            return self.getTypedRuleContext(urlParser.StringContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomainNameOrIPv4Host" ):
                listener.enterDomainNameOrIPv4Host(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomainNameOrIPv4Host" ):
                listener.exitDomainNameOrIPv4Host(self)



    def hostname(self):

        localctx = urlParser.HostnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_hostname)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12, 14]:
                localctx = urlParser.DomainNameOrIPv4HostContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.string()
                pass
            elif token in [4]:
                localctx = urlParser.IPv6HostContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.match(urlParser.T__3)
                self.state = 69
                self.v6host()
                self.state = 70
                self.match(urlParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class V6hostContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(urlParser.StringContext)
            else:
                return self.getTypedRuleContext(urlParser.StringContext,i)


        def DIGITS(self, i:int=None):
            if i is None:
                return self.getTokens(urlParser.DIGITS)
            else:
                return self.getToken(urlParser.DIGITS, i)

        def getRuleIndex(self):
            return urlParser.RULE_v6host

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterV6host" ):
                listener.enterV6host(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitV6host" ):
                listener.exitV6host(self)




    def v6host(self):

        localctx = urlParser.V6hostContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_v6host)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 74
                self.match(urlParser.T__5)


            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 77
                self.string()
                pass

            elif la_ == 2:
                self.state = 78
                self.match(urlParser.DIGITS)
                pass


            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2 or _la==6:
                self.state = 81
                _la = self._input.LA(1)
                if not(_la==2 or _la==6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 84
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 82
                    self.string()
                    pass

                elif la_ == 2:
                    self.state = 83
                    self.match(urlParser.DIGITS)
                    pass


                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PortContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGITS(self):
            return self.getToken(urlParser.DIGITS, 0)

        def getRuleIndex(self):
            return urlParser.RULE_port

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort" ):
                listener.enterPort(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort" ):
                listener.exitPort(self)




    def port(self):

        localctx = urlParser.PortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_port)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(urlParser.DIGITS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(urlParser.StringContext)
            else:
                return self.getTypedRuleContext(urlParser.StringContext,i)


        def getRuleIndex(self):
            return urlParser.RULE_path

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPath" ):
                listener.enterPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPath" ):
                listener.exitPath(self)




    def path(self):

        localctx = urlParser.PathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_path)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.string()
            self.state = 98
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 94
                    self.match(urlParser.T__2)
                    self.state = 95
                    self.string() 
                self.state = 100
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 101
                self.match(urlParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UserContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(urlParser.StringContext,0)


        def getRuleIndex(self):
            return urlParser.RULE_user

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUser" ):
                listener.enterUser(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUser" ):
                listener.exitUser(self)




    def user(self):

        localctx = urlParser.UserContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_user)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoginContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def user(self):
            return self.getTypedRuleContext(urlParser.UserContext,0)


        def password(self):
            return self.getTypedRuleContext(urlParser.PasswordContext,0)


        def getRuleIndex(self):
            return urlParser.RULE_login

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogin" ):
                listener.enterLogin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogin" ):
                listener.exitLogin(self)




    def login(self):

        localctx = urlParser.LoginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_login)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.user()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 107
                self.match(urlParser.T__1)
                self.state = 108
                self.password()


            self.state = 111
            self.match(urlParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PasswordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(urlParser.StringContext,0)


        def getRuleIndex(self):
            return urlParser.RULE_password

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPassword" ):
                listener.enterPassword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPassword" ):
                listener.exitPassword(self)




    def password(self):

        localctx = urlParser.PasswordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_password)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.string()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FragContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(urlParser.StringContext,0)


        def DIGITS(self):
            return self.getToken(urlParser.DIGITS, 0)

        def getRuleIndex(self):
            return urlParser.RULE_frag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrag" ):
                listener.enterFrag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrag" ):
                listener.exitFrag(self)




    def frag(self):

        localctx = urlParser.FragContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_frag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(urlParser.T__7)
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 116
                self.string()
                pass

            elif la_ == 2:
                self.state = 117
                self.match(urlParser.DIGITS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def search(self):
            return self.getTypedRuleContext(urlParser.SearchContext,0)


        def getRuleIndex(self):
            return urlParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = urlParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(urlParser.T__8)
            self.state = 121
            self.search()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SearchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def searchparameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(urlParser.SearchparameterContext)
            else:
                return self.getTypedRuleContext(urlParser.SearchparameterContext,i)


        def getRuleIndex(self):
            return urlParser.RULE_search

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSearch" ):
                listener.enterSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSearch" ):
                listener.exitSearch(self)




    def search(self):

        localctx = urlParser.SearchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_search)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.searchparameter()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 124
                self.match(urlParser.T__9)
                self.state = 125
                self.searchparameter()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SearchparameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(urlParser.StringContext)
            else:
                return self.getTypedRuleContext(urlParser.StringContext,i)


        def DIGITS(self):
            return self.getToken(urlParser.DIGITS, 0)

        def HEX(self):
            return self.getToken(urlParser.HEX, 0)

        def getRuleIndex(self):
            return urlParser.RULE_searchparameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSearchparameter" ):
                listener.enterSearchparameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSearchparameter" ):
                listener.exitSearchparameter(self)




    def searchparameter(self):

        localctx = urlParser.SearchparameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_searchparameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.string()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 132
                self.match(urlParser.T__10)
                self.state = 136
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
                if la_ == 1:
                    self.state = 133
                    self.string()
                    pass

                elif la_ == 2:
                    self.state = 134
                    self.match(urlParser.DIGITS)
                    pass

                elif la_ == 3:
                    self.state = 135
                    self.match(urlParser.HEX)
                    pass




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(urlParser.STRING, 0)

        def DIGITS(self):
            return self.getToken(urlParser.DIGITS, 0)

        def getRuleIndex(self):
            return urlParser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)




    def string(self):

        localctx = urlParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_string)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            _la = self._input.LA(1)
            if not(_la==12 or _la==14):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





